# Quantize

./: CMakeLists.txt  LICENSE  README.md
Quantize/: CMakeLists.txt  Dither.cpp  Dither.h  Palette.cpp  Palette.h  Quantizer.cpp  Quantizer.h  main.cpp
